<resources>
    <string name="app_name">Ouroboros</string>
    <string name="input_username">Username</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="bt_login">Log in</string>
    <string name="tv_registry">Sign up</string>
    <string name="button_registry">Create</string>
    <string name="input_repassword">Password again</string>
    <string name="msg_error_empty_box">You have to fill all inputs</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="msg_error_match_password">Both password must be same</string>
    <string name="msg_error_changed_email">The old and new email cannot be same</string>
    <string name="msg_error_changed_password">The old and new password cannot be same</string>
    <string name="msg_error_changed_username">The old and new username cannot be same</string>
    <string name="msg_error_match_new_password">Both new password must be same</string>
    <string name="msg_error_sesion_email">The email doesn\'t exist</string>
    <string name="msg_error_sesion_password">The password doesn\'t correct</string>
    <string name="msg_error_match_length_password">The password cannot be less than six digits</string>
    <string name="msg_error_match_length_passwords">The passwords cannot be less than six digits</string>
    <string name="msg_error_valid_email">The email doesn\'t valid</string>
    <string name="msg_error_user_exist">The user already exists</string>
    <string name="msg_error_email_exists">The email already exists</string>
    <string name="msg_user_created">User successfully created</string>
    <string name="msg_user_started">User successfully started</string>
    <string name="msg_error_already_coupled_topic">You cannot edit a coupled topic</string>
    <string name="logout">Log out</string>

    <string name="title_account">Account</string>
    <string name="title_topics">Topics</string>
    <string name="title_my_topics">My Topics</string>
    <string name="title">title</string>
    <string name="description">description</string>


    <string name="role_type_helper">Helper</string>
    <string name="role_type_applicant">Applicant</string>
    <string name="publication_type_post">Post</string>
    <string name="publication_type_request">Request</string>
    <string name="role_type_helper_small">H</string>
    <string name="role_type_applicant_small">A</string>
    <string name="search_topic_bar">Search topic</string>
    <string name="search_my_topic_bar">Search my topic</string>
    <string name="et_resource_title">Title</string>
    <string name="et_real_resource_title">Resource Title</string>
    <string name="et_wish_resource_title">Wish Resource Title</string>
    <string name="et_resource_location_latitude">Latitude</string>
    <string name="et_resource_location_longitude">Longitude</string>
    <string name="tv_resource_location">Resource Location</string>
    <string name="tv_real_resource_location">Resource Location</string>
    <string name="tv_wish_resource_location">Wish Resource Location</string>
    <string name="tv_publication_type">Publication Type</string>
    <string name="tv_role_type_topic">Topic Role Type</string>
    <string name="tv_category_type_topic">Resource Category</string>
    <string name="tv_category_type_topic_default">INDOOR</string>
    <string name="et_resource_description">Resource description</string>
    <string name="et_real_resource_description">Resource description</string>
    <string name="et_wish_resource_description">Wish Resource description</string>

    <string name="cd_iv_buttom_search_my_topic">Search My Topic</string>
    <string name="cd_iv_buttom_get_resource_location">Get Resource Location</string>
    <string name="cd_iv_buttom_add_my_topic">Add My Topic</string>
    <string name="cd_iv_add_topic_resource">Add Image Resource</string>
    <string name="cd_iv_role_type">Role type</string>

    <string name="error_msg_user_exists">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="error_msg_network">A network error (such as timeout, interrupted connection or unreachable host) has occurred.</string>
    <string name="error_msg_credentials_access">The password is invalid or the user does not have a password.</string>
    <string name="error_msg_email_exists">The email address is already in use by another account.</string>
    <string name="bt_logout">Log out</string>
    <string name="msg_error_valid_user">The user doesn\'t valid</string>
    <string name="msg_error_valid_location">The location doesn\'t valid</string>
    <string name="msg_error_network">Interrupted connection</string>
    <string name="msg_error_invalid_time">Invalid Local Time</string>
    <string name="msg_error_already_coupled">You have already coupled this topic</string>

    <string name="msg_topic_created">Topic was created successfully</string>
    <string name="msg_topic_edited">Topic was edited successfully</string>
    <string name="et_resource_publication_date">Publication Date</string>
    <string name="et_resource_publication_date_result">00/00/00 00:00:00</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="cd_iv_bt_edit">Edit</string>
    <string name="cd_iv_bt_delete">Delete</string>
    <string name="cd_iv_ouroboros_publisher">Ouroboros Publisher</string>
    <string name="tv_ouroboros_publisher">0.0</string>
    <string name="msg_user_edited">The user was edited successfully</string>
    <string name="msg_delete_question">Do you want to delete this topic?</string>
    <string name="msg_delete_question_positive">Confirm</string>
    <string name="msg_delete_question_negative">Cancel</string>
    <string name="tv_fragment_account_email">Email</string>
    <string name="tv_fragment_account_user">User</string>
    <string name="tv_fragment_account_ouroboros">Ouroboros</string>
    <string name="tv_fragment_account_registration_date">Registration Date</string>
    <string name="tv_fragment_account_last_sign_in_date">Last Sign In Date</string>
    <string name="tv_fragment_account_email_result">Email Description</string>
    <string name="tv_fragment_account_user_result">User Description</string>
    <string name="tv_fragment_account_ouroboros_result">Ouroboros Description</string>
    <string name="tv_fragment_account_last_sign_in_date_result">Last Sign In Date Description</string>
    <string name="tv_fragment_account_registration_date_result">Registration Date Description</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="msg_password_update_succesfully">The password was update successfully</string>
    <string name="msg_email_update_succesfully">The email was update successfully</string>
    <string name="msg_username_update_succesfully">The username was update successfully</string>
    <string name="msg_error_session_access">The old password doesn\'t correct</string>
    <string name="msg_password_update_error">The password cannot be update.</string>
    <string name="msg_email_update_error">The email cannot be update</string>
    <string name="cd_iv_update_email">Update Email</string>
    <string name="cd_iv_update_username">Update Username</string>
    <string name="cd_iv_update_password">Update Password</string>
    <string name="tv_fragment_account_password">Password</string>
    <string name="tv_fragment_account_password_result">******</string>
    <string name="new_email">New Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password Again</string>
    <string name="new_username">New Username</string>
    <string name="msg_error_valid_local_time">The local time doesn\'t valid</string>

    <string-array name="sp_resource_categories">
        <item>Indoor</item>
        <item>Outdoor</item>
    </string-array>

    <string name="title_activity_maps">Map</string>
    <string name="cd_iv_bt_show_location">Show Location</string>
    <string name="msg_unknown_resource_location">Unknown Resource Location</string>
    <string name="msg_wish_resource_location">Wish Resource Location</string>
    <string name="msg_resource_location">Resource Location</string>
    <string name="bt_set_location">Set Location</string>
    <string name="tv_role_type_topic_result">Topic Role Type Description</string>


    <string name="dialog_use_old_topics">Do you want to use any of your old topics?</string>
    <string name="dg_bt_accept">Accept</string>
    <string name="dg_bt_cancel">Cancel</string>
    <string name="tv_use_old_topics">Select any of your old topics to request</string>
    <string name="tv_select_request_topics">Select any of your received requests to coupling</string>
    <string name="tv_select_request_topic">Select your sent request to coupling</string>
    <string name="tv_role_dispatcher_label">Role Dispatcher</string>
    <string name="ouroboros_default_offering">0.00</string>
    <string name="ouroboros_offering">1.00</string>
    <string name="button_coupling">Couple</string>
    <string name="ouroboros_offering_label">Ouroboros Offering</string>
    <string name="ouroboros_load_label">Ouroboros Load</string>


    <string name="ouroboros">Ouroboros</string>
    <string name="helper_coupling_warning">If the Applicant accepts this request, then you will lost this resource and gain </string>
    <string name="helper_my_coupling_warning">If you accepts this request, then you will lost this resource and gain </string>
    <string name="applicant_coupling_warning_part_0">If the Helper accepts this request, then you will lost </string>
    <string name="applicant_my_coupling_warning_part_0">If you accepts this request, then you will lost </string>
    <string name="applicant_coupling_warning_part_1"> and gain this resource.</string>
    <string name="invalid_role_type_coupling_warning">Invalid Role Type</string>
    <string name="msg_error_cannot_delete_coupled_topic">You cannot delete a coupled topic</string>
    <string name="cd_iv_select_request_topic">Select this request topic</string>
    <string name="APPLICANT">APPLICANT</string>
    <string name="tv_ouroboros_label">Ouroboros Coin</string>
    <string name="tv_coupled_date_label">Coupled Date</string>
    <string name="tv_coupled_date">00:00:00 00/00/00</string>
    <string name="tv_empty_requests">Empty Requests</string>
    <string name="tv_empty_request">Empty My Request</string>
    <string name="empty_requests_warning">Do you want to deny all requests from this topic?</string>
    <string name="msg_error_requests_denied_already">There aren\'t requests to this topic and all your requests from this topic was deny.</string>
    <string name="msg_error_not_found_requests">There aren\'t requests to this topic.</string>
    <string name="msg_error_deleting_coupling_enable">You cannot delete any coupled topic</string>


</resources>
